Bug 291843 - Sometimes tooltip says "Connecting..." when it is not
Summary: Sometimes tooltip says "Connecting..." when it is not
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: presence-applet (other bugs)
Version First Reported In: git-latest
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-18 10:14 UTC by Daniele E. Domenichelli
Modified: 2012-07-06 12:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniele E. Domenichelli 2012-01-18 10:14:13 UTC
This might be related to https://bugs.kde.org/show_bug.cgi?id=284480
Comment 1 David Edmundson 2012-01-19 20:47:55 UTC
Git commit e74e202e4452c3e5270a331ed58750dce451edda by David Edmundson.
Committed on 19/01/2012 at 21:41.
Pushed by davidedmundson into branch 'master'.

Use ConnectionStatus to determine when connecting or not.

also fix some poor use of "else"

Reviewed by: Dominik Cermak

M  +3    -3    src/presenceapplet.cpp

http://commits.kde.org/telepathy-presence-applet/e74e202e4452c3e5270a331ed58750dce451edda