Use ConnectionStatus to determine when connecting or not.

also fix some poor use of "else"

Reviewed by: Dominik Cermak
BUG: 291843